--- a/room_reservation/.classpath
+++ b/room_reservation/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/KOSA/eclipse/jee-2023-12/eclipse/lombok.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
